# EmbeddingScratchwork

./: .gitattributes  .gitignore  LICENSE  README.md  _test_helpers.py  embed.ipynb  embed.py  environment.yml  hammer  log.txt  notes.txt  pyproject.toml  structure.ipynb  tce.md  test_embed.py  test_output  tox.ini
.devcontainer/: devcontainer.json  git_prompt_activate.bash  install-graphviz  onCreate  postCreate  postStart
.github/: dependabot.yml
.github/workflows/: codeql.yml  flake8.yml  get-blocking-config  lint.yml  markdown-links-config.json  markdown.yml  run-test-scripts  shellcheck.yml  test.yml  whitespace.yml
data/: usc_token_counts.csv
doc/: build.md  logo.tex
embed/: __init__.py  _keys.py  cached.py
embed/demos/: usc.py
investigation/: investigation.md
meta/: notes.md  notes.txt  run-test-scripts
notebooks/: cached.ipynb  embed.ipynb  hier.ipynb  structure.ipynb  tests_hier.ipynb
notebooks/demos/: usc.ipynb  usc_42.ipynb  usc_cost.ipynb  usc_embed.ipynb  usc_manual.ipynb
tests/: _audit.py  _base.py  _bases.py  _helpers.py  test_backoff.py  test_cached.py  test_cached_caching.py  test_cached_embeddings.py  test_embed.py  test_experimental.py  test_keys.py
