[tool.poetry]
name = "embeddingscratchwork"
version = "0.1.0"
description = "Scratch work for embeddings"
authors = [
    "David Vassallo <vassallo.davidm@gmail.com>",
    "Eliah Kagan <degeneracypressure@gmail.com>",
]
license = "0BSD"
readme = "README.md"
homepage = "https://github.com/dmvassallo/EmbeddingScratchwork"
repository = "https://github.com/dmvassallo/EmbeddingScratchwork"
keywords = [
    "embeddings",
    "similarity",
    "vector search",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing",
]
packages = [
    { include = "embed" },
]

[tool.poetry.dependencies]
python = "^3.8"
backoff = "^2.2.1"
blake3 = "^0.3.3"
dulwich = "^0.21.5"
numpy = "^1.24.3"
openai = { extras = ["embeddings"], version = "^0.27.8" }
orjson = "^3.9.1"
requests = "^2.31.0"
safetensors = "^0.3.1"
tiktoken = "^0.4.0"

[tool.poetry.group.dev.dependencies]
attrs = "^23.1.0"
flake8 = { version = "^6.0.0", python = ">=3.8.1,<4.0" }
flake8-pyproject = "^1.2.3"
isort = "^5.12.0"
parameterized = "^0.9.0"
pylint = "^2.17.4"
pylint-actions = "^0.4.0"
pylint-exit = "^1.2.0"
pylint-sarif-unofficial = "^0.1.0"
subaudit = "^0.1.0"

[tool.poetry.group.notebook.dependencies]
graphviz = "^0.20.1"
ipykernel = "^6.23.2"
jupyter-collaboration = "^1.0.0"
jupyterlab = "^4.0.2"
nbdime = "^3.2.1"
tabulate = "^0.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
extend-exclude = [
    ".ipynb_checkpoints/",
    ".venv*/",
    "venv*/",
]

[tool.isort]
atomic = true
force_sort_within_sections = true
include_trailing_comma = true
multi_line_output = 3

[tool.pylint.main]
disable = [
    "consider-using-f-string",
    "too-few-public-methods",
]
generated-members = "orjson.*"
load-plugins = [
    "pylint_actions",
]
max-parents = 8

[tool.tox]
legacy_tox_ini = """
    [tox]
    requires = tox>=4
    skip_missing_interpreters = false
    env_list = py{38,39,310,311}, flake8, isort

    [testenv]
    description = Run tests
    package = wheel
    allowlist_externals = poetry
    commands_pre =
        poetry export --only=dev --output={env_tmp_dir}/requirements_dev.txt
        pip install -qr {env_tmp_dir}/requirements_dev.txt
    commands =
        python -m unittest
    setenv =
        TESTS_CACHE_EMBEDDING_CALLS_IN_MEMORY = yes

    [testenv:flake8]
    description = flake8 lint
    basepython = py311
    commands =
        flake8

    [testenv:isort]
    description = isort check
    basepython = py311
    commands =
        isort --check .
"""
